--- a/README.html
+++ b/README.html
@@ -354,7 +354,7 @@ pre code {
 <p>Jonathan Payne 14/06/2022</p>
 </div>
 <div id="welcome-to-hydroenr" class="section level1">
-<h1>Welcome to HydroEnR</h1>
+<h1>Welcome to HydroEnR!</h1>
 <p>This package is designed for members of Evidence and Risk. It allows you to;</p>
 <ul>
 <li>Easily load data from WISKI
